<?xml version="1.0"?>
<package format="3">
  <name>pointcloud_saver_ros</name>
  <version>0.0.0</version>
  <description>The pointcloud_saver_ros package</description>
  <maintainer email="tnakamura.amsl@gmail.com">Toshiki Nakamura</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>
</package>
